src/test/resources/bad/custom/001-no-function-printStr.lat
int main() {
    printStr("WRONG!");
    return 0;
}
